--- a/web/src/components/Footer/styles.module.css
+++ b/web/src/components/Footer/styles.module.css
@@ -2,10 +2,12 @@
   background: var(--background);
   width: 100vw;
   justify-content: center;
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  height: 200px;
+  box-sizing: border-box;
 }
 
 .container span{
