--- a/web/src/components/Footer/styles.module.css
+++ b/web/src/components/Footer/styles.module.css
@@ -1,6 +1,6 @@
 .container{
   background: var(--background);
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   display: block;
   flex-direction: column;
