--- a/web/src/components/NavBar/styles.module.css
+++ b/web/src/components/NavBar/styles.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
 
-  width: 100vw;
+  width: 100%;
   height: 80px;
 
   background: var(--background-white);
