--- a/web/src/pages/Home.module.css
+++ b/web/src/pages/Home.module.css
@@ -41,6 +41,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
+  
 }
 
 .about{
@@ -77,8 +78,8 @@
 .imgAbout img{
   width: 38rem;
   padding: 3rem;
-  margin-left: 5rem;
-  margin-right: 1rem;
+  /* margin-left: 5rem; */
+  /* margin-right: 1rem; */
 }
 
 .imgBack{
@@ -106,7 +107,7 @@
   align-items: center;
   padding: 2rem;
   flex-wrap: wrap;
-  margin-left: 8rem;
+
 }
 
 .dev h3{
@@ -156,7 +157,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 60rem 30rem;
-  margin-left: 10rem;
+  /* margin-left: 10rem; */
 }
 
 .Inov h3{
@@ -206,8 +207,8 @@
   background: var(--background);
   color: white;
   align-items: center;
-  padding-left: 10rem;
-  padding-bottom: 2rem;
+  /* padding-left: 10rem;
+  padding-bottom: 2rem; */
   border-bottom: 6px solid #224D88;
 }
 
@@ -231,6 +232,8 @@
   display: flex;
   flex-direction: column;
 }
+
+
 
 .clientes h3{
   color: #224D88;
@@ -341,11 +344,72 @@
   animation: fadeIn 1.2s ease-in-out;
 }
 
-@media(max-width: 400px){
+ @media(max-width: 400px){
   .container {
       width: 100%;
   }
   .painel img{
     width: 10rem;
+  } 
+ }
+
+ @media(max-width: 900px){
+  .row {
+    display: flex;
+    flex-direction: column;
+    
   }
-}
+
+  .about{
+ 
+      display: flex;
+      flex-direction: column;
+      
+ 
+  }
+
+  .txt{
+
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .dev{
+    display: flex;
+    flex-direction: column;
+
+
+  }
+
+  .Inov{
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .txt{
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .clientes{
+
+    display:flex;
+     flex-direction: column;
+  }
+
+  .clientes img{
+
+    margin-top: 3rem;
+  }
+
+  .gridImages{
+
+    display:flex;
+     flex-direction: column;
+  }
+ }
+
+
