--- a/web/src/pages/Home.module.css
+++ b/web/src/pages/Home.module.css
@@ -6,7 +6,6 @@
   flex-wrap: wrap;
   background: var(--background-white);
   display: flex;
-
 }
 
 .content{
@@ -36,13 +35,6 @@
   z-index: 0;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-  
-}
 
 .footer{
   width: 100%;
@@ -95,12 +87,29 @@
   } 
  }
 
- @media(max-width: 900px){
-  .row {
-    display: flex;
-    flex-direction: column;
-  }
+ @media(max-width: 2000px){
+  
+.cardsInicio{
+  display: flex;
+  flex-direction:row ; 
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 1.5rem;   
+} 
 
+ }
+
+ @media(max-width: 1200px){
+  
+  .cardsInicio{
+    display: flex;
+    flex-direction:column ; 
+     } 
+  
+  
+   }
+  
+  
   .about{
     display: flex;
     flex-direction: column;
@@ -139,6 +148,6 @@
     display:flex;
     flex-direction: column;
   }
- }
+ 
 
 
