--- a/web/src/components/Desenvolvimento/styles.module.css
+++ b/web/src/components/Desenvolvimento/styles.module.css
@@ -1,17 +1,23 @@
+.container{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 1rem;
+}
+
 .dev{
   width: 100%;
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
-  padding: 2rem;
   flex-wrap: wrap;
-
 }
 
 .dev h3{
   color: #224D88;
-  margin-top: 0.2rem;
+  margin-top: 1.2rem;
   margin-bottom: 1.2rem;
+  font-size: 2rem;
 }
 
 .imgDev img{
@@ -26,8 +32,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-left: 2rem;
   box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
+  margin-left: 2rem;
 }
 
 .block h2{
@@ -47,12 +53,12 @@
 .Inov{
   width: 100%;
   display: grid;
-  grid-template-columns: 60rem 30rem;
-  /* margin-left: 10rem; */
+  grid-template-columns: 1fr 1fr;
+  padding-left: 10rem;
 }
 
 .Inov h3{
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: #224D88;
 }
 
@@ -61,17 +67,173 @@
   text-align: justify;
   color: #747780;
   margin-top: 0.6rem;
-  width: 60%;
+  width: 80%;
 }
 
 .imgInov img{
   width: 70%;
-  margin: 2rem;
+  margin: 1.6rem;
 }
 
 .celular img{
-  width: 60%;
-  margin-bottom: -2rem;
-  padding-top: 2rem;
-  margin-right: 2rem;
+  width: 40%;
+  padding-left: 2rem;
+}
+
+
+@media(max-width: 1400px){
+  .Inov{
+    margin-bottom: 1rem;
+  }
+  .celular img{
+    width: 60%;
+    margin-bottom: -2rem;
+  }
+}
+
+@media(max-width: 1200px){
+  .container h3{
+    font-size: 2rem;
+    margin-top: 0.6rem;
+  }
+  .dev{
+    padding-left: 1rem;
+    justify-content: center;
+  }
+  .imgDev{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .imgDev img{
+    width: 80%;
+  }
+  .imgConnected img{
+    width: 8rem;
+  }
+  .block{
+    margin-top: 2rem;
+  }
+  
+  .block h2{
+    font-size: 1.8rem;
+    color: #224D88;
+  }
+  
+  .block p{
+    font-size: 1rem;
+    color: var(--background);
+  }
+  .Inov{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 0.6rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .Inov h3{
+    width: 100%;
+  }
+  .Inov p{
+    width: 100%;
+    padding-right: 1rem;
+  }
+  .imgInov{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+  .imgInov img{
+    margin: 1.6rem;
+    width: 70%;
+    display: flex;
+  }
+  .celular{
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .celular img{
+    width: 50%;
+  }
+}
+
+@media(max-width: 760px){
+  .container h3{
+    font-size: 1.6rem;
+  }
+}
+
+@media(max-width: 600px){
+  .dev{
+    padding-left: 1rem;
+    justify-content: center;
+  }
+  .dev h3{
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1.2rem;
+    padding-left: 0.5rem
+  }
+  .imgDev{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .imgDev img{
+    width: 100%;
+  }
+  .imgConnected img{
+    width: 4rem;
+  }
+  .block{
+    margin-top: 1rem;
+  }
+  
+  .block h2{
+    font-size: 1.4rem;
+    color: #224D88;
+  }
+  
+  .block p{
+    font-size: 0.6rem;
+    color: var(--background);
+  }
+  .Inov{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 0.6rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .Inov h3{
+    width: 100%;
+  }
+  .Inov p{
+    width: 100%;
+  }
+  .imgInov{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+  .imgInov img{
+    margin: 1rem;
+    width: 80%;
+    display: flex;
+  }
+  .celular{
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .celular img{
+    width: 50%;
+  }
 }
