--- a/web/src/pages/Home.module.css
+++ b/web/src/pages/Home.module.css
@@ -1,24 +1,21 @@
 .container{
-  width: 100vw;
+  width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   background: var(--background-white);
   display: flex;
-
 }
 
 .content{
   width: 100%;
   height: 100%;
-
 }
 
 .sliderContent{
   display: flex;
   width: 100%;
-  display: flex;
   text-align: center;
   justify-content: space-between;
   box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
@@ -49,7 +46,9 @@
   display: block;
 }
 
-
+.dev{
+  width: 100%;
+}
 
 .linha{
   width: 85%;
