--- a/web/src/components/Footer/styles.module.css
+++ b/web/src/components/Footer/styles.module.css
@@ -6,22 +6,19 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  height: 200px;
   box-sizing: border-box;
 }
-
 
 .container span:first-child{
   margin-left: 0;
 }
 
 .container main{
-  text-align: left;
   width: 100%;
+  text-align: left;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 3rem;
-  gap: 1rem;
 }
 
 .contatos{
@@ -34,8 +31,6 @@
 .contatos p{
   font-size: 1rem;
   text-align: left;
-  margin-left: 1rem;
-  line-height: 1px;
 }
 
 .contatos strong{
@@ -45,12 +40,12 @@
 .contatos span{
   font-size: 1rem;
   text-align: left;
-  margin-right: 1rem;
   font-weight: bolder;
+  
 }
 
 .contatos i{
-  margin: 1rem;
+  margin-right: 1rem;
 }
 
 .sobre{
@@ -67,7 +62,6 @@
 
 .copyright{
   width: 100%;
-  height: 2rem;
   display: flex;
   flex-direction: row;
   background: var(--background-dark);
@@ -84,5 +78,71 @@
 .copyright p:last-child{
   color: var(--text);
   font-size: 1rem;
-  margin-left: 1rem;
+}
+
+@media(max-width: 400px){
+  .container{
+    width: 100%;
+  }
+  .container main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 0;
+  }
+  .contatos{
+    padding-top: 1rem;
+  }
+  .contatos p{
+    margin: 0;
+    text-align: center;
+  }
+  .sobre{
+    width: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 1rem;
+  }
+  .copyright p:first-child{
+    font-size: 0.8rem;
+  }
+  .copyright p:last-child{
+    font-size: 0.8rem;
+  }
+}
+
+@media(max-width: 650px) {
+  .container main{
+    padding: 1rem;
+  }
+  .sobre i{
+    margin-right: 1rem;
+  }
+}
+
+@media(max-width: 600px) {
+  .container i{
+    display: none;
+  }
+  .container main{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .contatos{
+    margin: 0;
+  }
+  .copyright p:first-child{
+    font-size: 0.8rem;
+    padding-right: 1rem;
+  }
+  .copyright p:last-child{
+    font-size: 0.8rem;
+  }
+  .container span{
+    font-size: 0.8rem;
+  }
 }
