--- a/web/src/components/Sobre/styles.module.css
+++ b/web/src/components/Sobre/styles.module.css
@@ -41,6 +41,36 @@ padding-left: 3rem;
 }
 
 
+@media(max-width: 1400px){
+
+  .about{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about h2{
+    font-size: 3rem;
+ 
+  }
+  
+  .about h3{
+    font-size: 1.5rem;
+
+  }
+  
+  .about span{
+    font-size: 1.3rem;  
+ 
+  }
+  
+  .about p{
+    font-size: 1.1rem;
+
+  }
+
+
+}
+
 @media(max-width: 1100px){
 
   .about{
