--- a/web/src/components/Sobre/styles.module.css
+++ b/web/src/components/Sobre/styles.module.css
@@ -36,16 +36,14 @@ padding-left: 3rem;
 .imgAbout img{
   width: 38rem;
   padding: 3rem;
-  /* margin-left: 5rem; */
-  /* margin-right: 1rem; */
 }
 
 
-@media(max-width: 1400px){
+@media(max-width: 1600px){
 
   .about{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   .about h2{
@@ -65,10 +63,11 @@ padding-left: 3rem;
   
   .about p{
     font-size: 1.1rem;
-
   }
-
-
+  .imgAbout img{
+    margin-top: 8rem;
+    margin-left: 4rem;
+  }
 }
 
 @media(max-width: 1100px){
