Alterações na imagem do celular

--- a/web/src/components/NavBar/styles.module.css
+++ b/web/src/components/NavBar/styles.module.css
@@ -73,7 +73,8 @@
 .menu li {
   margin-left: 1.2rem;
   margin-right: 1rem;
-  list-style-type: none
+  list-style-type: none;
+  color: var(--background)
 }
 
 .menu a {
