--- a/web/src/components/Desenvolvimento/styles.module.css
+++ b/web/src/components/Desenvolvimento/styles.module.css
@@ -207,10 +207,10 @@
   }
 }
 
-@media(max-width: 500px){
+@media(max-width: 550px){
 
   .container h3{
-
+    text-align: center;
     font-size: 1.2rem;
 
   }
