--- a/web/src/components/NavBar/styles.module.css
+++ b/web/src/components/NavBar/styles.module.css
@@ -6,34 +6,47 @@
   background: var(--background-white);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
   position: fixed;
+  display: flex;
+  justify-content: space-between;
   z-index: 2;
 }
 
 .dataAtual{
-  width: 12%;
+  width: 20%;
   height: 80px;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+
 }
 
 .dataAtual p{
-  width: 100%;
+  margin-right: 1rem;
   font-size: 1rem;
   text-transform: capitalize;
 }
 
 .conteudo {
   display: flex;
-  align-items: center;
-  justify-content: left;
-  flex-wrap: wrap;
+ align-items: center;
+    justify-content: space-between;
+/* flex-wrap: wrap; */
   width: 88%;
   height: 80px;
   max-height: 100%;
 }
 
-.logo {
-  padding: 0.25rem 0;
+.logo{
+display: flex;
+flex-direction: row;
+align-items: baseline;
+}
+.logo h2{
+   font-size: 2rem;
+}
+
+.logo img {
+  /* padding: 0.25rem 0; */
   margin-left: 2rem;
   width: 4rem;
   display: flex;
@@ -97,33 +110,61 @@
 @media (max-width: 1080px){
   .menu li{
       margin: 0 auto;
-  } 
+  }
 }
+
 
 
 @media (max-width: 880px) {
   .conteudo {
-      height: 5rem;
-      justify-content: center;
-      align-items: center;
+      height: 10rem;
+    justify-content: space-around;
+
+
+  }
+
+  .menu div button i { 
+
+
+   display: flex;
+   width: 4rem;
+   align-items: center;
+   margin-left: 1rem;
+   color: rgb(75, 70, 75);
+   
+
+  }
+
+  .logo{
+    display: flex;
+    justify-content: baseline;
+    align-items: flex-end;
+    height: 100%;
+
+    
   }
 
   .logo img{
-    margin: auto;
-    display: none;
+       width: 3rem;
+       margin-bottom: 0.7rem;
+         padding: 0.25rem 0;
+    /* display: none;    */
   }
 
   .dropdown{
-      display: block;
+
       position: absolute;
       left: 1rem;
+      background-color: deeppink;
+           
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 10px;
       margin-left: 0.2rem;
       background: none;
       border: none;
       outline: none;
+      /* align-content: center; */
   }
 
   .menu div ul{
@@ -147,6 +188,7 @@
 @media (max-width: 630px){
   .conteudo{
     width: 90%;
+
   }
   .dataAtual{
     width: 30%;
