--- a/web/src/pages/Contatos/styles.module.css
+++ b/web/src/pages/Contatos/styles.module.css
@@ -18,6 +18,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 2rem 0 2rem 0;
+  height: 100%;
 }
 
 .form h3{
@@ -29,7 +30,7 @@
 .form{
   width: 80%;
   box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
-  display: flex;
+  display: none;
   flex-direction: column;
   padding: 2rem;
   border-radius: 10px;
@@ -138,11 +139,15 @@
 
 .mapa{
   border: 0;
+  width: 450px;
+  height: 300px;
 }
 
 .contatos{
   background: #ebebeb;
   color: #224D88;
+  width: 100%;
+  height: 100%;
 }
 
 .contatos h3{
@@ -157,4 +162,82 @@
   margin-right: 2rem;
   margin-left: 1rem;
   font-size: 1.2rem;
+}
+
+.telefonesMaiores{
+  color: #224D88;
+}
+
+.telefonesMaiores h3{
+  color: #224D88;
+  margin: 1rem;
+  font-size: 1rem;
+}
+
+.telefonesMaiores p{
+  color: var(--background);
+  margin-bottom: 1rem;
+  margin-right: 2rem;
+  margin-left: 1rem;
+  font-size: 1.2rem;
+}
+
+.telefonesMenores{
+  display: none;
+}
+
+@media(max-width: 1400px){
+  .telefonesMenores{
+    display: block;
+    color: #224D88;
+  }
+
+  .telefonesMaiores{
+    display: none;
+  }
+  .telefonesMenores p{
+    color: var(--background);
+    margin-bottom: 1rem;
+    margin-right: 2rem;
+    margin-left: 1rem;
+    font-size: 1.2rem;
+  }
+  .telefonesMenores h3{
+    color: #224D88;
+    margin: 1rem;
+    font-size: 1rem;
+  }
+  .mapa{
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media(max-width: 800px){
+  .telefonesMenores p{
+    font-size: 1rem;
+  }
+  .contatos h3{
+    font-size: 0.8rem;
+  }
+}
+
+@media(max-width: 650px){
+  .telefonesMenores p{
+    font-size: 0.8rem;
+  }
+  .telefonesMenores h3{
+    font-size: 0.9rem;
+  }
+  .mapa{
+    width: 250px;
+    height: 280px;
+  }
+}
+
+@media(max-width: 500px){
+  .mapa{
+    width: 220px;
+    height: 280px;
+  }
 }
