Alterações da pagina de clientes

--- a/web/src/components/Clientes/styles.module.css
+++ b/web/src/components/Clientes/styles.module.css
@@ -20,59 +20,28 @@
   justify-content: center;
   background: white;
   padding: 1rem;
+  text-align: center;
 }
 
-.cliente1 img{
+.gridImages img{
   width: 10rem;
-  border-radius: 1000px;
-  margin-right: 2rem;
 }
 
-.cliente2{
+.gridImages a:nth-child(14) img{
   border-radius: 100px;
-  padding: 1rem;
+}
+
+.gridImages a:nth-child(16) img{
+  border-radius: 100px;
+}
+
+.clientes2{
+  border-radius: 100px;
   background: rgb(216, 40, 40);
   align-items: center;
   justify-content: center;
-  margin-right: 2rem;
-}
-
-.cliente2 img{
-  width: 10rem;
-}
-
-.cliente3 img{
-  width: 15rem;
-  margin-right: 2rem;
-}
-
-.cliente4 img{
-  width: 15rem;
-  border-radius: 1000px;
-  margin-right: 2rem;
-}
-
-.cliente5 img{
-  width: 15rem;
-  border-radius: 1000px;
-  margin-right: 2rem;
-}
-
-.cliente6 img{
-  width: 15rem;
-  border-radius: 1000px;
-  margin-right: 2rem;
-}
-
-.cliente7 img{
-  width: 15rem;
-  border-radius: 1000px;
-  margin-right: 2rem;
-}
-
-.cliente8 img{
-  width: 10rem;
-  border-radius: 1000px;
+  padding: 0.4rem;
+  margin-left: 2rem;
   margin-right: 2rem;
 }
 
@@ -98,17 +67,19 @@
     align-items: center;
     text-align: center;
   }
-  .gridImages img{
+  .gridImages a img{
     margin: 0;
     padding: 0;
     width: 12rem;
   }
-  .cliente1 img{
-    width: 10rem;
-  }
   .cliente2 img{
     width: 10rem;
   }
+  .gridImages a img{
+    width: 8rem;
+    margin-top: 2rem;
+  }
+  
 }
 
 @media(max-width: 1000px){
@@ -125,8 +96,9 @@
     padding: 0;
     width: 12rem;
   }
-  .cliente1 img{
+  .gridImages a img{
     width: 10rem;
+    margin-top: 2rem;
   }
   .cliente2 img{
     width: 10rem;
@@ -147,8 +119,9 @@
     padding: 0;
     width: 12rem;
   }
-  .cliente1 img{
+  .gridImages a img{
     width: 10rem;
+    margin-top: 2rem;
   }
   .cliente2 img{
     width: 10rem;
@@ -169,8 +142,9 @@
     padding: 0;
     width: 12rem;
   }
-  .cliente1 img{
+  .gridImages a img{
     width: 10rem;
+    margin-top: 2rem;
   }
   .cliente2 img{
     width: 10rem;
@@ -188,12 +162,12 @@
   }
   .gridImages img{
     margin: 0;
-    padding: 0;
-    width: 12rem;
-    margin-top: 1rem;
-  }
-  .cliente1 img{
+    padding: 0.5rem;
     width: 10rem;
+  }
+  .gridImages a img{
+    width: 10rem;
+    margin-top: 2rem;
   }
   .cliente2{
     margin: 0;
