--- a/web/src/pages/Contatos/styles.module.css
+++ b/web/src/pages/Contatos/styles.module.css
@@ -2,7 +2,7 @@
   background: #ebebeb;
   color: var(--background);
   width: 100vw;
-  height: 100%;
+  height: 71vh;
   margin: 0;
   box-sizing: border-box;
   top: 0;
@@ -148,6 +148,7 @@
   color: #224D88;
   width: 100%;
   height: 100%;
+
 }
 
 .contatos h3{
